// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthIndicator proxy status section renders the degraded workloads 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1icezv7"
  content={
    <div>
      <strong>
        Degraded
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-degraded",
                        "color": "var(--pf-v5-global--warning-color--100)",
                        "icon": [Function],
                        "name": "Degraded",
                        "priority": 3,
                      },
                      "text": "A: 2 / 2 (1 proxy unsynced)",
                    },
                  ],
                  "status": Object {
                    "className": "icon-degraded",
                    "color": "var(--pf-v5-global--warning-color--100)",
                    "icon": [Function],
                    "name": "Degraded",
                    "priority": 3,
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-v5-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-v5-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "className": "icon-na",
                    "color": "var(--pf-v5-global--Color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "className": "icon-na",
                  "color": "var(--pf-v5-global--Color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-degraded kiali_frkkrth"
    >
      <ExclamationTriangleIcon />
    </Icon>
  </span>
</Tooltip>
`;

exports[`HealthIndicator renders healthy 1`] = `
<Tooltip
  aria-label="Health indicator"
  className="kiali_f1icezv7"
  content={
    <div>
      <strong>
        Healthy
      </strong>
      <HealthDetails
        health={
          AppHealth {
            "health": Object {
              "items": Array [
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-healthy",
                        "color": "var(--pf-v5-global--success-color--100)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "A: 1 / 1",
                    },
                    Object {
                      "status": Object {
                        "className": "icon-healthy",
                        "color": "var(--pf-v5-global--success-color--100)",
                        "icon": [Function],
                        "name": "Healthy",
                        "priority": 1,
                      },
                      "text": "B: 2 / 2",
                    },
                  ],
                  "status": Object {
                    "className": "icon-healthy",
                    "color": "var(--pf-v5-global--success-color--100)",
                    "icon": [Function],
                    "name": "Healthy",
                    "priority": 1,
                  },
                  "title": "Pod Status",
                  "type": "pod_status",
                },
                Object {
                  "children": Array [
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-v5-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Inbound: No requests",
                      "value": 0,
                    },
                    Object {
                      "status": Object {
                        "className": "icon-na",
                        "color": "var(--pf-v5-global--Color--200)",
                        "icon": [Function],
                        "name": "No health information",
                        "priority": 0,
                      },
                      "text": "Outbound: No requests",
                      "value": 0,
                    },
                  ],
                  "status": Object {
                    "className": "icon-na",
                    "color": "var(--pf-v5-global--Color--200)",
                    "icon": [Function],
                    "name": "No health information",
                    "priority": 0,
                  },
                  "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                  "type": "traffic_status",
                },
              ],
              "statusConfig": Object {
                "status": Object {
                  "className": "icon-na",
                  "color": "var(--pf-v5-global--Color--200)",
                  "icon": [Function],
                  "name": "No health information",
                  "priority": 0,
                },
                "threshold": undefined,
                "title": "Traffic Status (Last {{duration}}) {\\"duration\\":\\"10m\\"}",
                "value": -1,
              },
            },
            "requests": Object {
              "healthAnnotations": Object {},
              "inbound": Object {},
              "outbound": Object {},
            },
          }
        }
      />
    </div>
  }
  position="auto"
>
  <span>
    <Icon
      className="icon-healthy kiali_f1r5cf3w"
    >
      <CheckCircleIcon />
    </Icon>
  </span>
</Tooltip>
`;
